--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-numpy==1.21.2
-pandas==1.3.3
-yfinance==0.1.63
-pandas-datareader==0.11.0
-plotly==5.3.1
-matplotlib==3.4.3
-scikit-learn==0.24.2
-tensorflow==2.6.0
-keras==2.6.0
+numpy
+pandas
+yfinance
+pandas-datareader
+plotly
+matplotlib
+scikit-learn
+tensorflow
+keras
 streamlit==1.0.0
-pandas-ta==0.3.15
-statsmodels==0.13.0
-scipy==1.7.1
-seaborn==0.11.2
-matplotlib==3.4.3
+pandas-ta
+statsmodels
+scipy
+seaborn
 
 
 
